weather fetch initial delay set to 0, and interval delay set to 1 minute.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 weather.apiKey = aa67371fffed03e5964428e6c7d83927
-weather.fetchDelayMs = 10000
+weather.fetchInitialDelayMinutes = 0
+weather.fetchDelayMinutes = 1
