--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 weather.apiKey = aa67371fffed03e5964428e6c7d83927
-weather.delay.initial = 0m
-weather.delay.interval = 1m
+weather.delay.timeUnit = MINUTES
+weather.delay.initial = 0
+weather.delay.interval = 1
