basic crud setup with a rest api to deliver weatherstamps for a country

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@ weather.apiKey = aa67371fffed03e5964428e6c7d83927
 weather.delay.timeUnit = MINUTES
 weather.delay.initial = 0
 weather.delay.interval = 1
+
+spring.datasource.url=jdbc:h2:mem:weatherdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=weatherman
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-ui
