--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
-		<camel.version>3.12.0</camel.version>
+		<camel.version>3.11.1</camel.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,6 +32,11 @@
 			<artifactId>camel-weather</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jpa-starter</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
