liquibase setup, along auto population of cities on startup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,17 @@ weather.delay.timeUnit = MINUTES
 weather.delay.initial = 0
 weather.delay.interval = 1
 
-spring.datasource.url=jdbc:h2:mem:weatherdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=weatherman
-spring.datasource.password=
+spring.datasource.url = jdbc:h2:mem:weatherdb
+spring.datasource.driverClassName = org.h2.Driver
+spring.datasource.username = weatherman
+spring.datasource.password =
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = update
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-ui
+spring.h2.console.enabled = true
+spring.h2.console.path = /h2-ui
+
+spring.liquibase.change-log = classpath:db/changelog/changelog.xml
+spring.liquibase.enabled = true
